opam-version: "2.0"
name: "odoc2docset"
synopsis: "Generates Dash docsets using Odoc"
description: """
Generates Dash docsets for OCaml packages using the Odoc documentation
generator.
"""
version: "1.2.1"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
license: "MIT"
homepage: "https://github.com/jfeser/odoc2docset"
bug-reports: "https://github.com/jfeser/odoc2docset/issues"
dev-repo: "git+https://github.com/jfeser/odoc2docset.git"
doc: "https://jfeser.github.io/odoc2docset/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"         {build}
  "logs"         {>= "0.6.2" & < "0.7"}
  "base"         {>= "v0.11.1" & < "v0.12"}
  "stdio"        {>= "v0.11" & < "v0.12"}
  "bos"          {>= "0.2" & < "0.3"}
  "odig"         {>= "0.0.3"}
  "odoc"         {>= "1.2.0"}
  "sqlite3"      {>= "4.4" & < "4.5"}
  "lambdasoup"   {>= "0.6.3" & < "0.7"}
  "cmdliner"     {>= "1.0.2" & < "1.1"}
  "fmt"          {>= "0.8.5" & < "0.9"}
]
pin-depends: [
  ["odoc.dev" "git+https://github.com/jfeser/odoc"]
]
