opam-version: "2.0"
name: "odoc2docset"
synopsis: "Generates Dash docsets using Odoc"
description: """
Generates Dash docsets for OCaml packages using the Odoc documentation
generator.
"""
version: "1.2.1"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
license: "MIT"
homepage: "https://github.com/jfeser/odoc2docset"
bug-reports: "https://github.com/jfeser/odoc2docset/issues"
dev-repo: "git+https://github.com/jfeser/odoc2docset.git"
doc: "https://jfeser.github.io/odoc2docset/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"         {build & >= "1.0"}
  "logs"         {>= "0.6"}
  "base"         {>= "v0.12"}
  "stdio"        {>= "v0.12"}
  "bos"          {>= "0.2"}
  "odig"         {>= "0.0.4"}
  "odoc"         {>= "1.4"}
  "sqlite3"      {>= "4.4"}
  "lambdasoup"   {>= "0.6"}
  "cmdliner"     {>= "1.0"}
  "fmt"          {>= "0.8"}
]
